--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,19 @@
   "dependencies": {
     "modernizr": "2.8.2",
     "jquery": "1.11.2",
-    "bootstrap": "3.3.4"
+    "bootstrap": "3.3.4",
+    "backbone": "~1.1.2",
+    "owl-carousel": "~1.3.2"
   },
   "overrides": {
+    "owl-carousel": {
+      "main": [
+        "./owl-carousel/owl.carousel.css",
+        "./owl-carousel/owl.theme.css",
+        "./owl-carousel/owl.transitions.css",
+        "./owl-carousel/owl.carousel.js"
+      ]
+    },
     "modernizr": {
       "main": "./modernizr.js"
     },
